--- a/package.json
+++ b/package.json
@@ -1,14 +1,33 @@
 {
-  "name": "meta-head",
-  "version": "1.0.0",
+  "name": "head-meta",
+  "version": "1.0.6",
   "description": "",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PratikChakraborty10/head-meta"
+  },
+  "keywords": [
+    "meta",
+    "meta-data",
+    "head",
+    "head-tags",
+    "link-tags",
+    "seo",
+    "socialmedia",
+    "preview",
+    "social-preview",
+    "open-graph",
+    "twitter",
+    "facebook",
+    "meta-tags"
+  ],
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "Pratik Chakraborty",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12"
